erDiagram
    %% CONCEPTUAL MODEL - Simplified Star Schema
    %% For production implementation, see: data-model.dbml (dbdiagram.io format)
    %%
    %% Techleap Ecosystem Data Warehouse - Star Schema

    dim_date {
        int date_sk PK
        date full_date
        int year
        int quarter
        int month
        string month_name
        boolean is_weekend
    }

    dim_companies {
        int company_sk PK
        string company_id
        string name
        date founding_date
        int employee_count
        decimal total_funding_eur
        string city
        string country
        timestamp valid_from
        timestamp valid_to
        boolean is_current
    }

    fact_funding_rounds {
        int funding_round_sk PK
        int company_sk FK
        date round_date
        string round_type
        decimal amount_eur
    }

    fact_patents {
        int patent_id PK
        int company_sk FK
        int filing_date_id FK
        string patent_number
        string patent_office
    }

    fact_news_mentions {
        int mention_id PK
        int company_sk FK
        int mention_date_id FK
        string source_name
        decimal sentiment_score
    }

    %% Relationships
    dim_companies ||--o{ fact_funding_rounds : receives
    dim_date ||--o{ fact_funding_rounds : on
    dim_companies ||--o{ fact_patents : holds
    dim_date ||--o{ fact_patents : filed
    dim_companies ||--o{ fact_news_mentions : mentioned
    dim_date ||--o{ fact_news_mentions : published
